logs/pyblox.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Paste-2.0.3.dist-info'...
Listing './lib/python3.5/site-packages/PasteDeploy-1.5.2.dist-info'...
Listing './lib/python3.5/site-packages/PasteScript-2.0.2.dist-info'...
Listing './lib/python3.5/site-packages/PyBlox-0.1.post0.egg-info'...
Listing './lib/python3.5/site-packages/paste'...
Listing './lib/python3.5/site-packages/paste/auth'...
Listing './lib/python3.5/site-packages/paste/cowbell'...
Listing './lib/python3.5/site-packages/paste/debug'...
Listing './lib/python3.5/site-packages/paste/deploy'...
Listing './lib/python3.5/site-packages/paste/deploy/paster_templates'...
Listing './lib/python3.5/site-packages/paste/deploy/paster_templates/paste_deploy'...
Listing './lib/python3.5/site-packages/paste/deploy/paster_templates/paste_deploy/+package+'...
Listing './lib/python3.5/site-packages/paste/deploy/paster_templates/paste_deploy/docs'...
Listing './lib/python3.5/site-packages/paste/evalexception'...
Listing './lib/python3.5/site-packages/paste/evalexception/media'...
Listing './lib/python3.5/site-packages/paste/exceptions'...
Listing './lib/python3.5/site-packages/paste/script'...
Listing './lib/python3.5/site-packages/paste/script/paster-templates'...
Listing './lib/python3.5/site-packages/paste/script/paster-templates/basic_package'...
Listing './lib/python3.5/site-packages/paste/script/paster-templates/basic_package/+package+'...
Listing './lib/python3.5/site-packages/paste/script/util'...
Listing './lib/python3.5/site-packages/paste/util'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyblox'...
Compiling './lib/python3.5/site-packages/pyblox/decorators.py'...
***   File "./lib/python3.5/site-packages/pyblox/decorators.py", line 119
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyblox/templates'...
Listing './lib/python3.5/site-packages/pyblox/templates/+package+'...
Listing './lib/python3.5/site-packages/pyblox/templates/+package+/application'...
Listing './lib/python3.5/site-packages/pyblox/templates/+package+/controllers'...
Listing './lib/python3.5/site-packages/pyblox/templates/+package+/lib'...
Listing './lib/python3.5/site-packages/pyblox/templates/+package+/model'...
Listing './lib/python3.5/site-packages/pyblox/templates/+package+/static'...
Listing './lib/python3.5/site-packages/pyblox/templates/+package+/static/img'...
Listing './lib/python3.5/site-packages/pyblox/templates/+package+/static/img/invoice'...
Listing './lib/python3.5/site-packages/pyblox/templates/+package+/static/img/tables'...
Listing './lib/python3.5/site-packages/pyblox/templates/+package+/static/js'...
Listing './lib/python3.5/site-packages/pyblox/templates/+package+/static/js/vendor'...
Listing './lib/python3.5/site-packages/pyblox/templates/+package+/static/js/vendor/angular'...
Listing './lib/python3.5/site-packages/pyblox/templates/+package+/static/js/vendor/bootstrap'...
Listing './lib/python3.5/site-packages/pyblox/templates/+package+/static/js/vendor/jquery'...
Listing './lib/python3.5/site-packages/pyblox/templates/+package+/static/js/vendor/misc'...
Listing './lib/python3.5/site-packages/pyblox/templates/+package+/static/src'...
Listing './lib/python3.5/site-packages/pyblox/templates/+package+/static/src/fonts'...
Listing './lib/python3.5/site-packages/pyblox/templates/+package+/static/src/less'...
Listing './lib/python3.5/site-packages/pyblox/templates/+package+/static/src/less/app'...
Listing './lib/python3.5/site-packages/pyblox/templates/+package+/static/src/less/bootstrap'...
Listing './lib/python3.5/site-packages/pyblox/templates/+package+/static/src/less/fontawesome'...
Listing './lib/python3.5/site-packages/pyblox/templates/+package+/static/styles'...
Listing './lib/python3.5/site-packages/pyblox/templates/+package+/static/styles/css'...
Listing './lib/python3.5/site-packages/pyblox/templates/+package+/static/views'...
Listing './lib/python3.5/site-packages/pyblox/templates/+package+/static/views/admin'...
Listing './lib/python3.5/site-packages/pyblox/templates/+package+/templates'...
Listing './lib/python3.5/site-packages/pyblox/templates/+package+/templates/html'...
Listing './lib/python3.5/site-packages/pyblox/templates/+package+/templates/html/admin'...
Listing './lib/python3.5/site-packages/pyblox/templates/+package+/templates/xml'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
